# ha_mqtt_publisher

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_DEBUGGING_REPORT.md  CLAUDE.md  DEBUGGING_NOTES.md  DOCUMENTATION_UPDATE_SUMMARY.md  ENHANCED_REFERENCE_IMPLEMENTATION.md  ENHANCEMENTS.md  FULL_FEATURED_SUMMARY.md  MIGRATION_COMPLETE.md  PAHO_MQTT_21_MIGRATION_PLAN.md  README.md  TWICKENHAM_MIGRATION_GUIDE.md  __init__.py  configuration_demo.py  debug_test.py  demo_entity_types.py  ha_mqtt_discovery.yaml  mypy.ini  pyproject.toml  pyproject.toml.backup  real_world_config_example.py  release.sh  release_notes.txt  sync_versions.py  test_mqtt_protocols.py
.archive/: README_OLD.md  configuration_demo.py  real_world_config_example.py  test_mqtt_protocols.py
.dev-scripts/: format.sh  git-wrapper.sh  release.sh  run.sh  test.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  release.yml  security.yml  version-bump.yml
config/: README.md  config.yaml.example  config_ha_discovery.yaml.example  ha_mqtt_discovery.json.example
docs/: README.md  VERSION_AUTOMATION.md  message_handler.md
examples/: README.md  bundle_only_verification.py  comprehensive_ha_discovery_example.py  device_bundle_discovery.py  device_centric_discovery.py  enhanced_features_example.py  entity_verification.py  full_featured_mqtt_example.py  ha_discovery_complete_example.py  ha_discovery_complete_example_new.py  ha_discovery_example  message_handler_example.py  simple_enhanced_discovery.py  twickenham_migration_example.py
ha_discovery/: status_sensor.py
ha_mqtt_discovery/: discovery.py  topic.py
ha_mqttt_config/: ha_mqtt_discovery.yaml  ha_mqtt_discovery.yaml.example
mqtt_publisher/: __init__.py  config.py  publisher.py
mqtt_publisher/ha_discovery/: __init__.py  device.py
scripts/: pre-commit-version-sync  sync_versions.py
src/ha_mqtt_publisher/: __init__.py  availability.py  commands.py  config.py  health.py  healthcheck_cli.py  json_publish.py  message_handler.py  mqtt_utils.py  publisher.py  service_runner.py  status.py  topic_map.py  validator.py
src/ha_mqtt_publisher/ha_discovery/: __init__.py  constants.py  device.py  enhanced_publisher.py  entity.py  publisher.py
src/ha_mqtt_publisher/ha_mqtt_discovery/: __init__.py  discovery.py
src/mqtt_publisher/: __init__.py  publisher.py
src/mqtt_publisher/ha_discovery/: __init__.py  constants.py  discovery_manager.py  entity.py  publisher.py  status_sensor.py
src/mqtt_publisher/ha_mqttt_config/: ha_mqtt_discovery.json  ha_mqtt_discovery.json.example  ha_mqtt_discovery.yaml.example
tests/: conftest.py  test_automation.py  test_basic_integration.py  test_command_processor_behavior.py  test_environment_handling.py  test_health.py  test_message_handler.py  test_mqtt5_support.py  test_mqtt_config.py  test_mqtt_publisher.py  test_mqtt_publisher_enhanced.py  test_mqtt_utils.py  test_publisher.py  test_scripts.py  test_service_runner.py  test_status_and_utils.py  test_version_sync.py
tests/ha_discovery/: __init__.py  test_device.py  test_discovery_manager.py  test_discovery_manager_basic.py  test_enhanced_publisher.py  test_ensure_discovery.py  test_entity.py  test_ha_publisher.py  test_one_time_discovery.py  test_publish_buttons_and_purge.py  test_publish_device_bundle.py  test_publish_device_config.py  test_publish_discovery_configs_bundle_flag.py  test_status_sensor.py  test_validation_slugify_exports.py
tests/ha_mqtt_config/: __init__.py  test_config.py
tests/ha_mqtt_discovery_topic/: __init__.py  test_topic.py
tests/ha_mqtt_discovery_topic/fixtures/: test_config.yaml
tests/publisher/: __init__.py  test_publisher.py  test_publisher_additional.py  test_publisher_coverage.py  test_publisher_coverage_focused.py  test_publisher_enhanced_features.py
