[tool.poetry]
name = "mqtt-publisher"
version = "0.1.0"
description = "An MQTT publisher package"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ronschaeffer/mqtt_publisher"
repository = "https://github.com/ronschaeffer/mqtt_publisher"
keywords = ["mqtt", "publisher", "iot"]
packages = [
    { include = "mqtt_publisher" },
    { include = "ha_mqtt_discovery" }
]

[tool.poetry.dependencies]
python = ">=3.9"
paho-mqtt = "^1.6.1"
pyyaml = "^6.0"
typing-extensions = "^4.7.0"  # For advanced typing support

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.10.0"
flake8 = "^6.0.0"
black = "^23.0.0"
mypy = "^1.0.0"
types-PyYAML = "^6.0.12"
types-paho-mqtt = "^1.6"
isort = "^5.10.1"
codespell = "^2.1.0"
pre-commit = "^2.15.0"
autopep8 = "^2.2.0"

[tool.pytest.ini_options]
pythonpath = [
    "."
]
testpaths = [
    "tests"
]
